CAPSTONE/k8s/router-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: router

  template:
    metadata:
      labels:
        app: router

    spec:
      containers:
      - name: router-server
        image: router

        ports:
        - containerPort: 3000
          name: router-port

        livenessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10

        readinessProbe:
          httpGet:
            path: /api/status/readyz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10

        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"
