CAPSTONE/k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-deployment
  labels:
    name: sandbox-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sandbox

  template:
    metadata:
      labels:
        app: sandbox

    spec:
      serviceAccountName: resource-manager
      containers:
      - name: main-sandbox-container
        image: sandbox:latest
        imagePullPolicy: IfNotPresent

        resources:
          requests:
            cpu: "250m"
            memory: "200Mi"
          limits:
            cpu: "500m"
            memory: "400Mi"

        ports:
        - containerPort: 3000
          name: main-sandbox

        livenessProbe:
          httpGet:
            path: /api/sandbox/health
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10

        readinessProbe:
          httpGet:
            path: /api/sandbox/health
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
