CAPSTONE/k8s/router-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  router-service
  labels:
    app:  router
spec:
  selector:
    app:  router
  type:  ClusterIP 
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  3000
